media/css/cms/flare26-theme.css
/*
* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at https://mozilla.org/MPL/2.0/.
*/

/* =====================================================================
Theme - Flare 2026 Design System Theme Variables

Contextual CSS custom properties that change based on context (e.g. layout direction, viewport size, dark mode, etc).
===================================================================== */

:root {
    /* Text colors */
    --fl-theme-color-text: var(--token-color-black-4);
    --fl-theme-color-text-inverse: var(--token-color-white);
    --fl-theme-color-banner-text: var(--token-color-white);
    --fl-theme-color-link: var(--token-color-link-purple);
    --fl-theme-color-link-hover: var(--token-color-link-purple);
    --fl-theme-color-link-alt-hover: var(--token-color-black-4);

    /* Background colors */
    --fl-theme-background: var(--token-color-white);

    /* Surface colors */
    --fl-theme-surface-card-gradient: var(--token-gradient-light);
    --fl-theme-card-superheading-color: var(--token-color-light-purple);

    /* Button palette */
    --fl-theme-button-primary: var(--token-color-link-purple);

    /* Typography variables */
    --fl-theme-font-family-headline: var(--token-font-family-mozilla-headline);
    --fl-theme-font-weight-headline: var(--token-font-weight-semibold);
    --fl-theme-font-family-body: var(--token-font-family-mozilla-text);
    --fl-theme-font-weight-body: var(--token-font-weight-regular);

    /* Font size variables */
    --fl-theme-font-size-heading-3xl: 5rem; /* 80px */
    --fl-theme-font-size-heading-2xl: 4rem; /* 64px */
    --fl-theme-font-size-heading-xl: 3rem; /* 48px */
    --fl-theme-font-size-heading-lg: 2.5rem; /* 40px */
    --fl-theme-font-size-heading-md: 2rem; /* 32px */
    --fl-theme-font-size-heading-sm: 1.5rem; /* 24px */
    --fl-theme-font-size-heading-xs: 1.125rem; /* 18px */
    --fl-theme-font-size-heading-2xs: 1rem; /* 16px */

    /* TODO: refactor these away. Subheading font size variables */
    --fl-theme-font-size-subheading-md: 1rem; /* 16px */
    --fl-theme-font-size-subheading-sm: 0.875rem; /* 14px */
    --fl-theme-font-size-subheading-xs: 0.75rem; /* 12px */

    /* Body font size variables */
    --fl-theme-font-size-body-lg: 1.25rem; /* 20px */
    --fl-theme-font-size-body-md: 1.125rem; /* 18px */
    --fl-theme-font-size-body-sm: 1rem; /* 16px */
    --fl-theme-font-size-body-xs: 0.875rem; /* 14px */
    --fl-theme-font-size-body-2xs: 0.75rem; /* 12px */

    /* Labels */
    --fl-theme-label-caps-md: 1rem; /* 16px */
    --fl-theme-label-caps-sm: 0.875rem; /* 14px */
    --fl-theme-label-caps-xs: 0.75rem; /* 12px */
    --fl-theme-label-md: 1rem; /* 16px */
    --fl-theme-label-sm: 0.875rem; /* 14px */
    --fl-theme-label-xs: 0.75rem; /* 12px */
    --fl-theme-label-color: var(--token-color-black-1);

    /* Line height variables NOT from Figma */
    --fl-theme-line-height-base: 1.2;

    /* Layout defaults */
    --fl-theme-layout-direction: column;
    --fl-theme-default-justify-content: center;
    --fl-theme-default-text-align: center;
    --fl-theme-main-border-radius: var(--token-layout-xs);

    /* Shadows */
    --fl-theme-shadow-card: 0 32px 72px var(--token-color-black-4-16);

    /* Dark mode support */
    color-scheme: light dark;

    /* Default space between page sections */
    --fl-section-v-padding: var(--token-layout-md-half);
    --fl-section-h-padding: var(--token-layout-3xs);
    --fl-section-heading-margin-bottom: var(--token-layout-sm);

    /* Card themes */
    --card-bg-color: var(--token-color-white);
    --card-border-color: var(--token-color-soft-purple);
    --theme-purple-card-bg-color: var(--token-color-soft-purple);
    --theme-purple-card-bullet-color: var(--token-color-purple);
    --theme-yellow-card-bg-color: var(--token-color-soft-yellow);
    --fl-step-card-bg: var(--token-color-cream);
    --fl-step-card-index-bg: var(--token-color-white);
    --cloud-background-gradient: linear-gradient(
        180deg,
        #fff44f 0%,
        #ffb84a 100%
    );

    /* Navigiation menu */
    --fl-logo-url: url('/media/img/logos/firefox/logo-word-hor.svg');
    --fl-menu-separator-color: var(--token-color-grey-2);
    --fl-menu-title-color: var(--token-color-black-4);
    --fl-menu-hamburger-bg: var(--token-color-soft-purple);
    --fl-menu-panel-border-color: var(--token-color-soft-purple);
    --fl-menu-panel-box-shadow-color: var(--token-color-soft-purple-64);
    --fl-menu-category-link-bg-color: var(--token-color-soft-purple-64);
    --fl-menu-category-link-hover-bg-color: var(--token-color-soft-purple);
    --fl-navigation-menu-height: 80px;
    --content-dark-mode-only: unset;
}

/* todo: when we build a proper dark mode, copy these up to a :root selector */
.fl-force-dark-theme {
    /* Main theme */
    --fl-theme-color-text: var(--token-color-white);
    --fl-theme-background: var(--token-color-dark-purple);
    --fl-theme-color-link: var(--token-color-white);
    --fl-theme-color-link-hover: var(--token-color-white);

    /* Navigiation menu */
    --fl-logo-url: url('/media/img/logos/firefox/logo-word-hor-white.svg');
    --fl-menu-separator-color: var(--token-color-light-purple);
    --fl-menu-title-color: var(--token-color-white);
    --fl-menu-hamburger-bg: var(--token-color-card-purple);
    --fl-menu-panel-border-color: var(--token-color-link-purple);
    --fl-menu-panel-box-shadow-color: var(--token-color-light-purple-20);
    --fl-menu-category-link-bg-color: var(--token-color-light-purple-20);
    --fl-menu-category-link-hover-bg-color: var(--token-color-link-purple);

    /* Step cards */
    --fl-step-card-bg: var(--token-color-medium-purple);
    --fl-step-card-index-bg: var(--token-color-dark-purple);
    --content-dark-mode-only: '';

    /* homepage card grid styles */
    --theme-purple-card-bg-color: var(--token-color-purple);
    --theme-purple-card-bullet-color: var(--token-color-light-purple);
    --theme-yellow-card-bg-color: var(--token-color-medium-purple);
    --cloud-background-gradient: linear-gradient(
        180deg,
        var(--token-color-medium-purple) 0%,
        var(--token-color-purple) 100%
    );
}

.fl-force-light-theme {
    /* Main theme */
    --fl-theme-color-text: var(--token-color-black-4);
    --fl-theme-background: var(--token-color-white);

    /* Navigiation menu */
    --fl-logo-url: url('/media/img/logos/firefox/logo-word-hor.svg');
    --fl-menu-separator-color: var(--token-color-grey-2);
    --fl-menu-title-color: var(--token-color-black-4);
    --fl-menu-hamburger-bg: var(--token-color-soft-purple);
    --fl-menu-panel-border-color: var(--token-color-soft-purple);
    --fl-menu-panel-box-shadow-color: var(--token-color-soft-purple-64);
    --fl-menu-category-link-bg-color: var(--token-color-soft-purple-64);
    --fl-menu-category-link-hover-bg-color: var(--token-color-soft-purple);

    /* Step cards */
    --fl-step-card-bg: var(--token-color-cream);
    --fl-step-card-index-bg: var(--token-color-white);
    --content-dark-mode-only: unset;
}

@media (prefers-color-scheme: dark) {
    :root {
        /* Main theme */
        --fl-theme-color-text: var(--token-color-white);
        --fl-theme-background: var(--token-color-dark-purple);
        --fl-theme-color-link: var(--token-color-white);
        --fl-theme-color-link-hover: var(--token-color-white);

        /* Navigiation menu */
        --fl-logo-url: url('/media/img/logos/firefox/logo-word-hor-white.svg');
        --fl-menu-title-color: var(--token-color-white);
        --fl-menu-panel-border-color: var(--token-color-link-purple);
        --fl-menu-panel-box-shadow-color: var(--token-color-light-purple-20);
        --fl-menu-category-link-bg-color: var(--token-color-light-purple-20);
        --fl-menu-category-link-hover-bg-color: var(--token-color-link-purple);

        /* Step cards */
        --fl-step-card-bg: var(--token-color-medium-purple);
        --fl-step-card-index-bg: var(--token-color-dark-purple);
        --content-dark-mode-only: '';

        /* homepage card grid styles */
        --theme-purple-card-bg-color: var(--token-color-purple);
        --theme-purple-card-bullet-color: var(--token-color-light-purple);
        --theme-yellow-card-bg-color: var(--token-color-medium-purple);
        --cloud-background-gradient: linear-gradient(
            180deg,
            var(--token-color-medium-purple) 0%,
            var(--token-color-purple) 100%
        );
    }
}

/* CSS custom properties are not resolved in media queries; so we
centralize breakpoints once and flip CSS variables inside.
components consume the variables (no per-component media queries) */

@media (--viewport-sm-up) {
    :root {
        --fl-theme-layout-direction: row;
        --fl-theme-default-justify-content: flex-start;
        --fl-theme-default-text-align: left;
        --fl-theme-font-size-heading-3xl: 8rem; /* 128px */
        --fl-theme-font-size-heading-2xl: 5rem; /* 80px */
        --fl-theme-font-size-heading-xl: 4rem; /* 64px */
        --fl-theme-font-size-heading-lg: 2.5rem; /* 40px */
        --fl-theme-font-size-heading-md: 2rem; /* 32px */
        --fl-theme-font-size-heading-sm: 1.5rem; /* 24px */
        --fl-theme-font-size-heading-xs: 1.125rem; /* 18px */
        --fl-theme-font-size-heading-2xs: 1rem; /* 16px */
        --fl-theme-font-size-body-lg: 1.5rem; /* 24px */
        --fl-theme-font-size-body-md: 1.25rem; /* 20px */
        --fl-section-v-padding: calc(var(--token-layout-lg) / 2);
        --fl-section-hgroup-padding-bottom: var(--token-layout-sm);
        --fl-section-hgroup-gap: var(--token-spacing-xl);
    }
}

@media (--viewport-md-up) {
    :root {
        --fl-theme-font-size-heading-3xl: 10rem; /* 160px */
        --fl-theme-font-size-heading-2xl: 8rem; /* 128px */
        --fl-theme-font-size-heading-xl: 5rem; /* 80px */
        --fl-theme-font-size-heading-lg: 4rem; /* 64px */
        --fl-theme-font-size-heading-md: 3rem; /* 48px */
        --fl-theme-font-size-heading-sm: 2rem; /* 32px */
        --fl-theme-font-size-heading-xs: 1.5rem; /* 24px */
        --fl-theme-font-size-body-lg: 2rem; /* 32px */
        --fl-theme-font-size-body-md: 1.5rem; /* 24px */
        --fl-section-v-padding: var(--token-layout-lg-half);
        --fl-section-heading-margin-bottom: var(--token-layout-sm);
        --fl-theme-main-border-radius: var(--token-layout-lg);
    }
}

